name:                heub
version:             0.1.0.0
synopsis:            A base haskell template for building REST API includes user authentication, authorization, auth token services.
description:         Please see README.md
homepage:            http://github.com/cackharot/heub#readme
license:             MIT
license-file:        LICENSE
author:              cackharot
maintainer:          cackharot@gmail.com
copyright:           2016 cackharot
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Api.Core
                     , Api.UserService
                     , App.Model
                     , Services.AuthenticationService
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.9
                     , bson >= 0.3.2.1
                     , text
                     , mtl
                     , mongoDB >= 2.0.10
                     , snap
                     , snap-core
                     , snap-server
                     , snap-loader-static
                     , heist
                     , bytestring
                     , lens
                     , aeson
  default-language:    Haskell2010

executable heub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , heub
                     , snap
                     , snap-core
                     , snap-server
                     , snap-loader-static
                     , heist
                     , bytestring
                     , lens
                     , text
                     , aeson
  default-language:    Haskell2010

test-suite heub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs

  other-modules:       Lib
                     , Api.Core
                     , Api.UserService
                     , App.Model
                     , Services.AuthenticationService

                     , AuthenticationServiceSpec
                     , ModelSpec

  build-depends:       base
                     , hspec
                     , QuickCheck
                     , mtl
                     , mongoDB >= 2.0.10
                     , heub
                     , bson >= 0.3.2.1
                     , bytestring
                     , utf8-string
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-language:    Haskell2010

test-suite doctest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          DocTest.hs
    build-depends:    base, doctest == 0.10.*, Glob == 0.7.*
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite haddock
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Haddock.hs
    build-depends:    base, process, regex-compat == 0.95.*
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite hlint
    type:             exitcode-stdio-1.0
    main-is:          HLint.hs
    hs-source-dirs:   test
    build-depends:    base, hlint == 1.9.*
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/cackharot/heub
